/*
Copyright 2023 The olive Authors

This program is offered under a commercial and under the AGPL license.
For AGPL licensing, see below.

AGPL licensing:
This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto3";

package planepb;

option go_package = "github.com/olive-io/olive/api/planepb;planepb";

import "github.com/olive-io/olive/api/types/core/v1/generated.proto";

// for grpc-gateway
import "google/api/annotations.proto";

service Cluster {
  // MemberAdd adds a member into the cluster.
  rpc MemberAdd(MemberAddRequest) returns (MemberAddResponse) {
    option (google.api.http) = {
      post: "/v1/cluster/member/add"
      body: "*"
    };
  }

  // MemberRemove removes an existing member from the cluster.
  rpc MemberRemove(MemberRemoveRequest) returns (MemberRemoveResponse) {
    option (google.api.http) = {
      post: "/v1/cluster/member/remove"
      body: "*"
    };
  }

  // MemberUpdate updates the member configuration.
  rpc MemberUpdate(MemberUpdateRequest) returns (MemberUpdateResponse) {
    option (google.api.http) = {
      post: "/v1/cluster/member/update"
      body: "*"
    };
  }

  // MemberList lists all the members in the cluster.
  rpc MemberList(MemberListRequest) returns (MemberListResponse) {
    option (google.api.http) = {
      post: "/v1/cluster/member/list"
      body: "*"
    };
  }

  // MemberPromote promotes a member from raft learner (non-voting) to raft voting member.
  rpc MemberPromote(MemberPromoteRequest) returns (MemberPromoteResponse) {
    option (google.api.http) = {
      post: "/v1/cluster/member/promote"
      body: "*"
    };
  }
}

message MemberAddRequest {
  // peerURLs is the list of URLs the added member will use to communicate with the cluster.
  repeated string peerURLs = 1;
  // isLearner indicates if the added member is raft learner.
  bool isLearner = 2;
}

message MemberAddResponse {
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
  // member is the member information for the added member.
  github.com.olive_io.olive.api.types.core.v1.Member member = 2;
  // members is a list of all members after adding the new member.
  repeated github.com.olive_io.olive.api.types.core.v1.Member members = 3;
}

message MemberRemoveRequest {
  // ID is the member ID of the member to remove.
  uint64 ID = 1;
}

message MemberRemoveResponse {
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
  // members is a list of all members after removing the member.
  repeated github.com.olive_io.olive.api.types.core.v1.Member members = 2;
}

message MemberUpdateRequest {
  // ID is the member ID of the member to update.
  uint64 ID = 1;
  // peerURLs is the new list of URLs the member will use to communicate with the cluster.
  repeated string peerURLs = 2;
}

message MemberUpdateResponse{
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
  // members is a list of all members after updating the member.
  repeated github.com.olive_io.olive.api.types.core.v1.Member members = 2;
}

message MemberListRequest {
  bool linearizable = 1;
}

message MemberListResponse {
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
  // members is a list of all members associated with the cluster.
  repeated github.com.olive_io.olive.api.types.core.v1.Member members = 2;
}

message MemberPromoteRequest {
  // ID is the member ID of the member to promote.
  uint64 ID = 1;
}

message MemberPromoteResponse {
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
  // members is a list of all members after promoting the member.
  repeated github.com.olive_io.olive.api.types.core.v1.Member members = 2;
}

service PlaneRPC {
  rpc GetPlane(GetPlaneRequest) returns (GetPlaneResponse) {
    option (google.api.http) = {
      get: "/v1/plane/get"
    };
  };
  rpc ListRunner(ListRunnerRequest) returns (ListRunnerResponse) {
    option (google.api.http) = {
      get: "/v1/runners"
    };
  };
  rpc GetRunner(GetRunnerRequest) returns (GetRunnerResponse) {
    option (google.api.http) = {
      get: "/v1/runner/{name}"
    };
  };
}

message GetPlaneRequest {}

message GetPlaneResponse {
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
  github.com.olive_io.olive.api.types.core.v1.Plane plane = 2;
}

message ListRunnerRequest {}

message ListRunnerResponse {
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
  repeated github.com.olive_io.olive.api.types.core.v1.Runner runners = 2;
}

message GetRunnerRequest {
  string name = 1;
}

message GetRunnerResponse {
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
  github.com.olive_io.olive.api.types.core.v1.Runner runner = 2;
  github.com.olive_io.olive.api.types.core.v1.RunnerStatistics stat = 3;
}

service BpmnRPC {
  rpc DeployDefinition(DeployDefinitionRequest) returns (DeployDefinitionResponse) {
    option (google.api.http) = {
      post: "/v1/definition/deploy"
      body: "*"
    };
  };
  rpc ListDefinition(ListDefinitionRequest) returns (ListDefinitionResponse) {
    option (google.api.http) = {
      get: "/v1/definitions"
    };
  };
  rpc GetDefinition(GetDefinitionRequest) returns (GetDefinitionResponse) {
    option (google.api.http) = {
      get: "/v1/definition/{id}"
    };
  };
  rpc RemoveDefinition(RemoveDefinitionRequest) returns (RemoveDefinitionResponse) {
    option (google.api.http) = {
      post: "/v1/definition/remove"
      body: "*"
    };
  };
  rpc ExecuteDefinition(ExecuteDefinitionRequest) returns (ExecuteDefinitionResponse) {
    option (google.api.http) = {
      post: "/v1/definition/execute"
      body: "*"
    };
  };
}

message DeployDefinitionRequest {
  string id = 1;
  string name = 2;
  string content = 3;
}

message DeployDefinitionResponse {
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
  int64 version = 2;
}

message ListDefinitionRequest {
  int64 limit = 1;
  string continue = 21;
}

message ListDefinitionResponse {
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
  repeated github.com.olive_io.olive.api.types.core.v1.Definition definitions = 2;
  string continueToken = 3;
}

message GetDefinitionRequest {
  string id = 1;
  int64 version = 2;
}

message GetDefinitionResponse {
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
  github.com.olive_io.olive.api.types.core.v1.Definition definition = 2;
}

message RemoveDefinitionRequest {
  string id = 1;
}

message RemoveDefinitionResponse {
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
}

message ExecuteDefinitionRequest {
  string definitionId = 1;
  uint64 definitionVersion = 2;
  string name = 3;
  map<string, string> header = 4;
  map<string, bytes> properties = 5;
  map<string, bytes> dataObjects = 6;
}

message ExecuteDefinitionResponse {
  github.com.olive_io.olive.api.types.core.v1.ResponseHeader header = 1;
  github.com.olive_io.olive.api.types.core.v1.ProcessInstance instance = 2;
}
